--- a/index.html
+++ b/index.html
@@ -509,38 +509,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 <!--main navbar-->
-<script src="js/vacation-estimator/stepper-js-file.js"></script>
+<script src="js/main-site/stepper-js-file.js"></script>
 
-<script type="text/javascript">
-$('#chooseFile').bind('change', function () {
-  var filename = $("#chooseFile").val();
-  if (/^\s*$/.test(filename)) {
-    $(".file-upload").removeClass('active');
-    $("#noFile").text("No file chosen..."); 
-  }
-  else {
-    $(".file-upload").addClass('active');
-    $("#noFile").text(filename.replace("C:\\fakepath\\", "")); 
-  }
-});
-
-$(function (){
-  $("#listTo").sortable();
-  $("#listTo").disableSelection();
-  
-  $(document).on("click", "#listFrom li", function () {
-    $(this).unbind("click").appendTo("#listTo");
-  });
-  $(document).on("click", "#listTo li", function () {
-    $(this).unbind("click").appendTo("#listFrom");
-  });
-});
-
-var slider = document.getElementById("myRange");
-var output = document.getElementById("demo");
-output.innerHTML = slider.value;
-
-slider.oninput = function() {
-  output.innerHTML = this.value;
-}
-</script>
+<script src="js/main-site/main.js"></script>
