--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
 
-  <link rel="stylesheet" href="css/vacation-estimator.css">
+  <link rel="stylesheet" href="css/main.css">
   
   <!--bootstrap-->
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
