change id names class names

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
 
+  <title>FYP</title>
+  
   <link rel="stylesheet" href="css/main.css">
   
   <!--bootstrap-->
@@ -97,11 +99,11 @@
             <div class="col-sm-6">
               <div class="md-form">
                 <div class="dropdown">
-                  <button class="dLabel dropdown-select-arriving" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <button class="dLabel dropdown-select-annotation-table" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Select
                     <span class="caret"></span>
                   </button>
-                  <ul class="dropdown-menu dropdown-menu-arriving" aria-labelledby="dLabel">
+                  <ul class="dropdown-menu dropdown-menu-annotation-table" aria-labelledby="dLabel">
                     <li>Early Morning (1AM-7AM)</li>
                     <li>Late Morning (8AM-11AM)</li>
                     <li>Afternoon (12PM-3PM)</li>
@@ -120,11 +122,11 @@
             <div class="col-sm-6">
               <div class="md-form">
                 <div class="dropdown">
-                  <button class="dLabel dropdown-select-arriving" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <button class="dLabel dropdown-select-column-avg" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Select
                     <span class="caret"></span>
                   </button>
-                  <ul class="dropdown-menu dropdown-menu-arriving" aria-labelledby="dLabel">
+                  <ul class="dropdown-menu dropdown-menu-column-avg" aria-labelledby="dLabel">
                     <li>Early Morning (1AM-7AM)</li>
                     <li>Late Morning (8AM-11AM)</li>
                     <li>Afternoon (12PM-3PM)</li>
@@ -181,11 +183,11 @@
             <div class="col-sm-6">
               <div class="md-form">
                 <div class="dropdown">
-                  <button class="dLabel dropdown-select-arriving" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <button class="dLabel dropdown-select-normalize-method" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Select
                     <span class="caret"></span>
                   </button>
-                  <ul class="dropdown-menu dropdown-menu-arriving" aria-labelledby="dLabel">
+                  <ul class="dropdown-menu dropdown-menu-normalize-method" aria-labelledby="dLabel">
                     <li>Early Morning (1AM-7AM)</li>
                     <li>Late Morning (8AM-11AM)</li>
                     <li>Afternoon (12PM-3PM)</li>
@@ -204,11 +206,11 @@
             <div class="col-sm-6">
               <div class="md-form">
                 <div class="dropdown">
-                  <button class="dLabel dropdown-select-arriving" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <button class="dLabel dropdown-select-null-value" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Select
                     <span class="caret"></span>
                   </button>
-                  <ul class="dropdown-menu dropdown-menu-arriving" aria-labelledby="dLabel">
+                  <ul class="dropdown-menu dropdown-menu-null-value" aria-labelledby="dLabel">
                     <li>Early Morning (1AM-7AM)</li>
                     <li>Late Morning (8AM-11AM)</li>
                     <li>Afternoon (12PM-3PM)</li>
@@ -222,9 +224,9 @@
 
           <div class="row" style="margin-top: 40px;">
             <div class="col-sm-5"></div>
-            <div class='form-field col-sm-6 step-miami-checkbox'>
-              <p><input name='checkbox-miami' type="checkbox" class="filled-in" id="checkbox-miami" value='checkbox-miami'/>
-                <label for="checkbox-miami">DEFAULT METHODS</label>
+            <div class='form-field col-sm-6 step-3-default'>
+              <p><input name='checkbox-3-default' type="checkbox" class="filled-in" id="checkbox-3-default" value='checkbox-3-default'/>
+                <label for="checkbox-3-default">DEFAULT METHODS</label>
               </p>
             </div>
             <div class="col-sm-1"></div>
@@ -272,11 +274,11 @@
             <div class="row md-form">
               <label><b>FOLD RANGE</b></label>
               <div class="dropdown">
-                <button class="dLabel dropdown-select-adults" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="dLabel dropdown-select-fold-range" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Select
                   <span class="caret"></span>
                 </button>
-                <ul class="dropdown-menu dropdown-menu-adults" aria-labelledby="dLabel">
+                <ul class="dropdown-menu dropdown-menu-fold-range" aria-labelledby="dLabel">
                   <li>1</li>
                   <li>2</li>
                   <li>3</li>
@@ -292,7 +294,7 @@
             </div>
 
             <div class="row" style="margin-top: 30px;">
-              <button id="btn-set-date-1" type="button" class="btn btn-primary btn-lg btn-block"><p class="btn-page-2-p">CALCULATE</p></button>
+              <button id="btn-set-5-calculate" type="button" class="btn btn-primary btn-lg btn-block"><p class="btn-page-2-p">CALCULATE</p></button>
             </div>
 
             <div class="row" style="margin-top: 30px;">
@@ -329,11 +331,11 @@
               <div class="row md-form">
                 <label><b>SELECTED FEATURES</b></label>
                 <div class="dropdown">
-                  <button class="dLabel dropdown-select-adults" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <button class="dLabel dropdown-select-feature-number" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Select
                     <span class="caret"></span>
                   </button>
-                  <ul class="dropdown-menu dropdown-menu-adults" aria-labelledby="dLabel">
+                  <ul class="dropdown-menu dropdown-menu-feature-number" aria-labelledby="dLabel">
                     <li>1</li>
                     <li>2</li>
                     <li>3</li>
@@ -348,8 +350,8 @@
                 </div>            
               </div>
               <div class='row form-field step-miami-checkbox' style="margin-top: 30px;">
-                <p><input name='checkbox-miami' type="checkbox" class="filled-in" id="checkbox-miami" value='checkbox-miami'/>
-                  <label for="checkbox-miami">SELECT ALL FEATURES</label>
+                <p><input name='checkbox-all-features' type="checkbox" class="filled-in" id="checkbox-all-features" value='checkbox-all-features'/>
+                  <label for="checkbox-all-features">SELECT ALL FEATURES</label>
                 </p>
               </div>  
             </div>
