--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 
 <head>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Mentor Education Bootstrap Theme</title>
+
+  <title>GeNet</title>
+
   <meta name="description" content="Free Bootstrap Theme by BootstrapMade.com">
   <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
 
@@ -13,12 +16,7 @@
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/imagehover.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <!-- =======================================================
-    Theme Name: Mentor
-    Theme URL: https://bootstrapmade.com/mentor-free-education-bootstrap-theme/
-    Author: BootstrapMade.com
-    Author URL: https://bootstrapmade.com
-  ======================================================= -->
+
 </head>
 
 <body>
@@ -31,7 +29,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">Men<span>tor</span></a>
+        <a class="navbar-brand" href="{{ url_for('index') }}">
+            <img src="img/logo/logo.png" alt="logo" style="width:115px; margin-top: -3px;">
+        </a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
@@ -46,6 +46,7 @@
     </div>
   </nav>
   <!--/ Navigation bar-->
+
   <!--Modal box-->
   <div class="modal fade" id="login" role="dialog">
     <div class="modal-dialog modal-sm">
