--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           <li><a href="#organisations">Organisations</a></li>
           <li><a href="#courses">Courses</a></li>
           <li><a href="#pricing">Pricing</a></li>
-          <li><a href="#" data-target="#login" data-toggle="modal">Sign in</a></li>
-          <li class="btn-trial"><a href="#footer">Free Trail</a></li>
+          <li><a href="#pricing">Pricing</a></li>
+          <li class="btn-trial"><a href="#" data-target="#login" data-toggle="modal">Sign in</a></li>
         </ul>
       </div>
     </div>
