--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>GeNet | CRASH COURSES</title>
+  <title>GeNet | FAQ</title>
 
   <link rel="icon" href="img/logo/favicon.png" sizes="32x32" />
   <link rel="icon" href="img/logo/favicon.png" sizes="192x192" />
@@ -110,7 +110,7 @@
         <div class="row">
           <div class="banner-text text-center">
             <div class="text-border">
-              <h2 class="text-dec">CRASH COURSE</h2>
+              <h2 class="text-dec">GeNet FAQ</h2>
             </div>
             <div class="intro-para text-center quote">
 <!--               <p class="big-text">From unrefined data to meaningful insights</p> -->
@@ -123,100 +123,32 @@
   </div>
   <!--/ Banner-->
 
-  <!--Courses-->
-  <section id="courses" class="section-padding">
+  <!--step_1-->
+  <section id="step_1" class="section-padding">
     <div class="container">
       <div class="row">
-        <div class="header-section text-center">
-          <h2>Courses</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem nesciunt vitae,<br> maiores, magni dolorum aliquam.</p>
-          <hr class="bottom-line">
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4 col-sm-6 padleft-right">
-          <figure class="imghvr-fold-up">
-            <img src="img/course01.jpg" class="img-responsive">
-            <figcaption>
-              <h3>Course Name</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam atque, nostrum veniam consequatur libero fugiat, similique quis.</p>
-            </figcaption>
-            <a  data-toggle="modal" data-target="#course_one"></a>
-          </figure>
-        </div>
-        <div class="col-md-4 col-sm-6 padleft-right">
-          <figure class="imghvr-fold-up">
-            <img src="img/course02.jpg" class="img-responsive">
-            <figcaption>
-              <h3>Course Name</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam atque, nostrum veniam consequatur libero fugiat, similique quis.</p>
-            </figcaption>
-            <a href="#"></a>
-          </figure>
-        </div>
-        <div class="col-md-4 col-sm-6 padleft-right">
-          <figure class="imghvr-fold-up">
-            <img src="img/course03.jpg" class="img-responsive">
-            <figcaption>
-              <h3>Course Name</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam atque, nostrum veniam consequatur libero fugiat, similique quis.</p>
-            </figcaption>
-            <a href="#"></a>
-          </figure>
-        </div>
-        <div class="col-md-4 col-sm-6 padleft-right">
-          <figure class="imghvr-fold-up">
-            <img src="img/course04.jpg" class="img-responsive">
-            <figcaption>
-              <h3>Course Name</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam atque, nostrum veniam consequatur libero fugiat, similique quis.</p>
-            </figcaption>
-            <a href="#"></a>
-          </figure>
-        </div>
-        <div class="col-md-4 col-sm-6 padleft-right">
-          <figure class="imghvr-fold-up">
-            <img src="img/course05.jpg" class="img-responsive">
-            <figcaption>
-              <h3>Course Name</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam atque, nostrum veniam consequatur libero fugiat, similique quis.</p>
-            </figcaption>
-            <a href="#"></a>
-          </figure>
-        </div>
-        <div class="col-md-4 col-sm-6 padleft-right">
-          <figure class="imghvr-fold-up">
-            <img src="img/course06.jpg" class="img-responsive">
-            <figcaption>
-              <h3>Course Name</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam atque, nostrum veniam consequatur libero fugiat, similique quis.</p>
-            </figcaption>
-            <a data-toggle="modal" data-target="#myModal"></a>
-          </figure>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!--/ Courses-->
-
-  <!-- Modal -->
-  <div class="modal fade" id="course_one" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Modal Header</h4>
-        </div>
-        <div class="modal-body">
-          <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+        <div class="col-md-12">
+          <div class="detail-info">
+            <hgroup>
+              <h3 class="det-txt-manual"> Is inclusive quality education affordable?</h3>
+              <p class="det-p-manual">Donec et lectus bibendum dolor dictum auctor in ac erat. Vestibulum egestas sollicitudin metus non urna in eros tinciduntconvallis id id nisi in interdum.</p>
+            </hgroup>
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="detail-info">
+            <hgroup>
+              <h3 class="det-txt-manual"> Is inclusive quality education affordable?</h3>
+              <p class="det-p-manual">Donec et lectus bibendum dolor dictum auctor in ac erat. Vestibulum egestas sollicitudin metus non urna in eros tincidunt convallis id id nisi in interdum. Donec et lectus bibendum dolor</p>
+            </hgroup>
+          </div>
+        </div>
+      </div>      
     </div>
-  </div>
+  </section>
+  <!--/ step_1-->
 
   <!--Footer-->
   <footer id="footer" class="footer">
@@ -265,20 +197,13 @@
   </footer>
   <!--/ Footer-->
 
-  <script src="js/jquery.min.js"></script>
-  <script src="js/jquery.easing.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/custom.js"></script>
-  <script src="contactform/contactform.js"></script>
-
 </body>
 
 </html>
 
-<script type="text/javascript">
-  
-  $('.course_one').click(function() {
-    $('#model_div').show();
-    console.log('ok'); 
-  });
-</script>
+<script src="js/jquery.min.js"></script>
+<script src="js/jquery.easing.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/custom.js"></script>
+<script src="contactform/contactform.js"></script>
+
