--- a/faq.html
+++ b/faq.html
@@ -12,7 +12,7 @@
   <link rel="icon" href="img/logo/favicon.png" sizes="192x192" />
   <link rel="apple-touch-icon-precomposed" href="img/logo/favicon.png" />
 
-  <meta name="description" content="GeNet is a microarray gene expression analysis tool kit. It is a python based web application that can be used to preprocess, visualize, analyze, model, and predict results using microarray gene expression data">
+  <meta name="description" content="Go through some of the Frequently Asked Questions on GeNet and the answers to these questions">
   <meta name="keywords" content="genet, gene expression, microarray">
 
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans|Candal|Alegreya+Sans">
@@ -51,69 +51,17 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#feature">Features</a></li>
-          <li><a href="#organisations">Organisations</a></li>
-          <li><a href="#courses">Courses</a></li>
-          <li><a href="#pricing">Pricing</a></li>
-          <li><a href="#pricing">Pricing</a></li>
-          <li class="btn-trial"><a href="#" data-target="#login" data-toggle="modal">Sign in</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="user_guide.html">User guide</a></li>
+          <li><a href="manual.html">Manual</a></li>
+          <li><a href="nomenclature.html">Nomenclature</a></li>
+          <li><a href="crash_courses.html">Crash course</a></li>
+          <li><a style="color: #5fcf80;">Faq</a></li>
         </ul>
       </div>
     </div>
   </nav>
   <!--/ Navigation bar-->
-
-  <!--Modal box-->
-  <div class="modal fade" id="login" role="dialog">
-    <div class="modal-dialog modal-sm">
-
-      <!-- Modal content no 1-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title text-center form-title">Login</h4>
-        </div>
-        <div class="modal-body padtrbl">
-
-          <div class="login-box-body">
-            <p class="login-box-msg">Sign in to start your session</p>
-            <div class="form-group">
-              <form name="" id="loginForm">
-                <div class="form-group has-feedback">
-                  <!----- username -------------->
-                  <input class="form-control" placeholder="Username" id="loginid" type="text" autocomplete="off" />
-                  <span style="display:none;font-weight:bold; position:absolute;color: red;position: absolute;padding:4px;font-size: 11px;background-color:rgba(128, 128, 128, 0.26);z-index: 17;  right: 27px; top: 5px;" id="span_loginid"></span>
-                  <!---Alredy exists  ! -->
-                  <span class="glyphicon glyphicon-user form-control-feedback"></span>
-                </div>
-                <div class="form-group has-feedback">
-                  <!----- password -------------->
-                  <input class="form-control" placeholder="Password" id="loginpsw" type="password" autocomplete="off" />
-                  <span style="display:none;font-weight:bold; position:absolute;color: grey;position: absolute;padding:4px;font-size: 11px;background-color:rgba(128, 128, 128, 0.26);z-index: 17;  right: 27px; top: 5px;" id="span_loginpsw"></span>
-                  <!---Alredy exists  ! -->
-                  <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-                </div>
-                <div class="row">
-                  <div class="col-xs-12">
-                    <div class="checkbox icheck">
-                      <label>
-                                <input type="checkbox" id="loginrem" > Remember Me
-                              </label>
-                    </div>
-                  </div>
-                  <div class="col-xs-12">
-                    <button type="button" class="btn btn-green btn-block btn-flat" onclick="userlogin()">Sign In</button>
-                  </div>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-  <!--/ Modal box-->
 
   <!--Banner-->
   <div class="banner-manual">
@@ -126,7 +74,7 @@
             </div>
             <div class="intro-para text-center quote">
 <!--               <p class="big-text">From unrefined data to meaningful insights</p> -->
-              <p class="small-text">“GeNet is a microarray gene expression analysis tool kit. It is a python based web application that can be used to preprocess,<br>visualize, analyze, model, and predict results using microarray gene expression data”</p>
+              <p class="small-text">“Go through some of the Frequently Asked Questions on GeNet and the answers to these questions”</p>
             </div>
           </div>
         </div>
@@ -136,7 +84,7 @@
   <!--/ Banner-->
 
   <!--step_1-->
-  <section id="step_1" class="section-padding">
+  <section id="step_1" class="section-padding-index">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -162,6 +110,8 @@
   </section>
   <!--/ step_1-->
 
+  <a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top" role="button"><i class="fa fa-arrow-circle-up fa-4x" aria-hidden="true"></i></a>
+  
   <!--Footer-->
   <footer id="footer" class="footer">
     <div class="container text-center">
